--- a/src/homepage_bcc.html
+++ b/src/homepage_bcc.html
@@ -3,48 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recife</title>
+    <title>Ciência da Computação</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
         <span>
-            <img src="src/brasao_outline.png" width=15% height=15% alt="RECIFE">
-            <h1><strong>UFRN - Ciência da Computação</strong></h1>
+            <img src="img/brasao_negativo.png" width=10% height=10% alt="RECIFE">
+            <h1><strong>UFRN - Cursos de Informática</strong></h1>
         </span>
         <hr size="2">
-        <h2><strong>Localização e Estrutura</strong></h2>
-        <img src="src/dimap_home.e6f520c.jpg" alt="Torre de Cristal" width="70%" height="70%">
     </header>
     <main>
         <div class="bcc-infos">
-            <div class="bcc-location">
-                <h3><strong>Localização</strong></h3>
-                <p>O curso de ciência da computação localiza-se na zona 3 próximo ao ccet, com o seu prédio sendo
-                    o Departamento de Informática e Matemática Aplicada.</p>
-                <a href="https://maps.app.goo.gl/y3AjFTPVw4dYFiVG7">Dimap - Google Maps</a>
+            <div class="content-container">
+                <div class="bcc-title">
+                    <h1>Ciência da Computação</h1>
+                </div>
             </div>
             <hr>
-            <div class="bcc-resume">
-                <h3><strong>Apresentação</strong></h2>
-            <img src="src/_paco_do_frevo_2.jpg" alt="Paço do Frevo" width="70%" height="70%">
-                <h3><strog>História</strog></h3>
-                <p>O curso de Ciência.</p>
+            <div class="content-container">
+                <div class="bcc-card">
+                    <h2><strong>Localização</strong></h2>
+                    <img src="img/dimap_home.e6f520c.jpg" alt="dimap prédio"  width=800px height=400px>
+                    <ul>
+                        <li>Localiza-se no campos de Natal da UFRN, na zona 3 próximo 
+                            ao ccet e no prédio do Departamento de Informática e Matemática Aplicada;</li>
+                        <li><a href="https://maps.app.goo.gl/y3AjFTPVw4dYFiVG7">Dimap - Google Maps.</a></li>
+                    </ul>
+                </div>
             </div>
-    
-            <div clas="bcc-career">
-                <h3><strong>Carreira</strong></h3>
-                <p>Oferece possibilidades. </p>
+            <hr>
+            <div class="content-container">
+                <div class="bcc-card">
+                    <h2><strong>Apresentação</strong></h2>
+                    <img src="img/sala_computadores.jpg" alt="Paço do Frevo"  width=800px height=400px>
+                    <ul>
+                        <li>O curso planeja a formação teórica e prática do aluno
+                            na compreensão do campo científico da computação; </li>
+                        <li>Permitindo uma maior compreensão na resolução de problemas  
+                            e no desenvolvimento de conhecimentos para a sociedade.</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="content-container">
+                <div class="bcc-card">
+                    <h2><strong>Matérias</strong></h2>
+                    <img src="img/matériasilustração.jpg" alt="matérias ilustração" width=800px height=400px>
+                    <ul>
+                        <li>Terá um maior enfoque nos fundamentos e pilares da computação, 
+                            abragendo disciplinas informática, matemática e outras;</li>
+                        <li>Exemplos: Linguagens de Programação e Compiladores, Arquitetura de Computadores, 
+                            Álgebra Linear etc.</li>
+                    </ul>
+                </div>
             </div>
             <hr>
         </div>
     </main>
     <footer>
-        <div>
-            <h2>Informações Para Contato</h2>
+        <div class="footer-box">
+            <div class="footer-section">
+                <p>© 2023, Universidade Federal do Rio Grande do Norte.</p>
+            </div>
+            <div class="footer-section">
+                <p>Telefone - (84) 3342-2299
+                    cccc@dimap.ufrn.</p>
+                <p>Natal/RN - Brasil</p>
+            </div>
         </div>
-        <p>+66 94954 8943</p> 
-        <p>pontosturisticosrecife@gmail.com</p> 
-        <p>Rua Lavras 22, Olinda - PE</p>  
     </footer>
 </body>
 </html>
