--- a/src/homepage_avan.html
+++ b/src/homepage_avan.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciência da Computação</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
+    <link href="css/styles_avancado.css" rel="stylesheet"/>
 </head>
 <body>
+    <script src="codigo.js"></script>
     <header>
         <span>
-            <img src="img/brasao_outline.png" width=10% height=10% alt="Brasão UFRN">
+            <img src="img/brasao_negativo.png" width=10% height=10% alt="Brasão UFRN">
             <h1><strong>UFRN - Cursos de Informática</strong></h1>
         </span>
+            <a href="https://www.dimap.ufrn.br/">Dimap</a>
         <hr size="2">
     </header>
     <main>
         <div class="bcc-infos">
-            <div class="content-container">
-                <div class="bcc-title">
+            <input type="text" id="nome" placeholder="Digite">
+            <input type="button" value="Enviar" onclick="enviarInformacoes()">
+            <p id="texto"></p>
+            <div onclick=mudar_fundo() class="content-container">
+                <div onclick=mudar_fundo()  class="bcc-title" id="teste">
+                    <img src="img/desing.png" alt="quadrados-coloridos" width="15%" height="15%">
                     <h1>Ciência da Computação</h1>
                 </div>
             </div>
             <div class="content-container">
                 <div class="bcc-card">
+                    <img src="img/desing.png" alt="quadrados-coloridos" width="10%" height="10%">
                     <h2>Localização</h2>
                     <div class="card-content">
                         <ul>
@@ -36,6 +46,7 @@
             <hr>
             <div class="content-container">
                 <div class="bcc-card">
+                    <img src="img/desing.png" alt="quadrados-coloridos" width="10%" height="10%">
                     <h2>Apresentação</h2>
                     <div class="card-content">
                         <ul>
@@ -51,6 +62,7 @@
             <hr>
             <div class="content-container">
                 <div class="bcc-card">
+                    <img src="img/desing.png" alt="quadrados-coloridos" width="10%" height="10%">
                     <h2>Matérias</h2>
                     <div class="card-content">
                         <ul>
