--- a/src/homepage_init.html
+++ b/src/homepage_init.html
@@ -4,30 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciência da Computação</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
-    <link href="src/css/styles_avancado.css" rel="stylesheet"/>
+    <link href="css/styles_simples.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <span>
-            <img src="src/img/brasao_negativo.png" width=10% height=10% alt="Brasão UFRN">
-            <h1><strong>UFRN - Cursos de Informática</strong></h1>
-        </span>
-            <a href="https://www.dimap.ufrn.br/">Dimap</a>
-        <hr size="2">
-    </header>
+    <div class="page-header"> 
+        <header>
+            <span>
+                <img src="img/brasao_negativo.png" width="10%" height="10%" alt="Brasão UFRN">
+                <h1><strong>UFRN - Cursos de Informática</strong></h1>
+            </span>
+            <hr size="2">
+        </header>
+    </div>
     <main>
         <div class="bcc-infos">
             <div class="content-container">
                 <div class="bcc-title">
-                    <img src="src/img/desing.png" alt="quadrados-coloridos" width="15%" height="15%">
                     <h1>Ciência da Computação</h1>
                 </div>
             </div>
             <div class="content-container">
                 <div class="bcc-card">
-                    <img src="src/img/desing.png" alt="quadrados-coloridos" width="10%" height="10%">
                     <h2>Localização</h2>
                     <div class="card-content">
                         <ul>
@@ -35,14 +32,13 @@
                                 ao ccet e no prédio do Departamento de Informática e Matemática Aplicada;</li>
                             <li><a href="https://maps.app.goo.gl/y3AjFTPVw4dYFiVG7">Dimap - Google Maps.</a></li>
                         </ul>
-                        <img src="src/img/dimap_home.e6f520c.jpg" alt="dimap prédio"  width=800px height=400px>
+                        <img src="img/dimap.jpg" alt="dimap prédio"  width=800px height=400px>
                     </div>
                 </div>
             </div>
             <hr>
             <div class="content-container">
                 <div class="bcc-card">
-                    <img src="src/img/desing.png" alt="quadrados-coloridos" width="10%" height="10%">
                     <h2>Apresentação</h2>
                     <div class="card-content">
                         <ul>
@@ -51,14 +47,13 @@
                             <li>Permitindo uma maior compreensão na resolução de problemas  
                                 e no desenvolvimento de conhecimentos para a sociedade.</li>
                         </ul>
-                        <img src="src/img/sala_computadores.jpg" alt="Paço do Frevo"  width=800px height=400px>
+                        <img src="img/laboratorios.jpg" alt="Paço do Frevo"  width=800px height=400px>
                     </div>
                 </div>
             </div>
             <hr>
             <div class="content-container">
                 <div class="bcc-card">
-                    <img src="src/img/desing.png" alt="quadrados-coloridos" width="10%" height="10%">
                     <h2>Matérias</h2>
                     <div class="card-content">
                         <ul>
@@ -67,7 +62,7 @@
                             <li>Exemplos: Linguagens de Programação e Compiladores, Arquitetura de Computadores, 
                                 Álgebra Linear etc.</li>
                         </ul>
-                        <img src="src/img/matériasilustração.jpg" alt="matérias ilustração" width=800px height=400px>
+                        <img src="img/matériasilustração.jpg" alt="matérias ilustração" width=800px height=400px>
                     </div>
                 </div>
             </div>
