--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,9 @@
                 <h2><strong>Notas de Corte e Calculadora de Pesos</strong></h2>
                 <div class="content-card">
                     <div class="content-text">
-                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.
-                        A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
-                        problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
+                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
+                            A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
+                            problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p>  
                     </div>
                     <div class="calculator-box">
                         <form id="notas-calculadora">
