--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFRN-Ciências da Computação</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="css/bcc.css" rel="stylesheet">
 </head>
 <body>
@@ -38,8 +39,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/dimap.jpg" alt="prédio do curso" width="400vh" height="250vh">
-                            <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="400vh" height="250vh">
+                            <img src="img/dimap.jpg" alt="prédio do curso" width="550vh" height="250vh">
+                            <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="550vh" height="250vh">
                         </span>
                     </div>
                     <hr>
@@ -53,8 +54,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="400vh" height="250vh">
-                            <img src="img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="400vh" height="250vh">
+                            <img src="img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="550vh" height="250vh">
+                            <img src="img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="550vh" height="250vh">
                         </span>
                     </div>
                     <hr>
@@ -68,8 +69,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/cientista-da-computacao.webp" alt="prédio do curso" width="400vh" height="250vh">
-                            <img src="img/mercado de trabalho.jpg" alt="laboratorios do curso" width="400vh" height="250vh">
+                            <img src="img/cientista-da-computacao.webp" alt="prédio do curso" width="550vh" height="250vh">
+                            <img src="img/mercado de trabalho.jpg" alt="laboratorios do curso" width="550vh" height="250vh">
                         </span>
                     </div>
                     <hr>
