finalizado função js

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
                                     <input id="peso-redacao" type="number" placeholder="PESO"><br><br>
                                 </div>
                                 <div class="form-row">
-                                    <button id="botao-submit" type="button" onclick="calcular()">Calcular</button>
+                                    <button id="botao-submit" type="button" onclick="media()">Calcular</button>
                                     <div class="calculator-result">
                                         <p>Resultado:</p>
                                         <p id="calc-result"></p>
