--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFRN-Ciências da Computação</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="css/bcc.css" rel="stylesheet">
-    <script src="js/calculadora.js" defer></script>
+    <link href="css/bcc_avancado.css" rel="stylesheet">
+    <script src="js/calculadora_avancada.js" defer></script>
 </head>
 <body>
     <div class="bcc-header-conteiner">
         <header>
             <div class="header-title">
-                <img src="img/brasao_negativo.png" alt="brasão ufrn" width="10%" height="10%">
+                <img src="img/brasao_negativo.png" alt="brasão ufrn" width="8%" height="8%">
                 <h1><strong>UFRN - Ciências da Computação</strong></h1>
             </div>
             <div class="header-nav">
@@ -40,8 +40,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/dimap.jpg" alt="prédio do curso" width="550vh" height="250vh">
-                            <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="550vh" height="250vh">
+                            <img src="img/dimap.jpg" alt="prédio do curso" width="350vh" height="150vh">
+                            <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="350vh" height="150vh">
                         </span>
                     </div>
                     <hr>
@@ -115,7 +115,7 @@
                                     <input id="peso-redacao" type="number" placeholder="PESO"><br><br>
                                 </div>
                                 <div class="form-row">
-                                    <button id="botao-submit" type="button" onclick="media()">Calcular</button>
+                                    <button id="botao-submit" type="button" onclick="media_ponderada()">Calcular</button>
                                     <div class="calculator-result">
                                         <p>Resultado:</p>
                                         <p id="calc-result"></p>
