--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,11 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/dimap.jpg" alt="prédio do curso" width="350vh" height="150vh">
-                            <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="350vh" height="150vh">
+                            <figure>
+                                <figcaption>Texto sobre a imagem</figcaption>
+                                <img src="img/dimap.jpg" alt="prédio do curso" width="450vh" height="250vh">
+                                <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
+                            </figure>
                         </span>
                     </div>
                     <hr>
@@ -55,8 +58,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="550vh" height="250vh">
-                            <img src="img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="550vh" height="250vh">
+                            <img src="img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="450vh" height="250vh">
+                            <img src="img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="450vh" height="250vh">
                         </span>
                     </div>
                     <hr>
@@ -70,8 +73,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <img src="img/cientista-da-computacao.webp" alt="prédio do curso" width="550vh" height="250vh">
-                            <img src="img/mercado de trabalho.jpg" alt="laboratorios do curso" width="550vh" height="250vh">
+                            <img src="img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
+                            <img src="img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
                         </span>
                     </div>
                     <hr>
