corrigindo estilos header

--- a/src/teste.html
+++ b/src/teste.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFRN-Ciências da Computação</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="css/bcc_avancado.css" rel="stylesheet">
+    <link href="css/teste.css" rel="stylesheet">
     <script src="js/calculadora_avancada.js" defer></script>
 </head>
 <body>
-    <div class="bcc-header-conteiner">
+    <div class="bcc-header-container">
         <header>
             <div class="header-logo">
                 <img src="img/brasao_negativo.png" alt="brasão ufrn" width="8%" height="8%">
