--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <script src="js/calculadora_avancada.js" defer></script>
 </head>
 <body>
-    <div class="bcc-header-conteiner">
+    <div class="bcc-header-container">
         <header>
-            <div class="header-title">
+            <div class="header-logo">
                 <img src="img/brasao_negativo.png" alt="brasão ufrn" width="8%" height="8%">
-                <h1><strong>UFRN - Ciências da Computação</strong></h1>
             </div>
             <div class="header-nav">
+                <h1><strong>UFRN - Ciências da Computação</strong></h1>
                 <nav>
                     <ul class="nav-items">
                         <li><a class="nav-link" href="https://www.ufrn.br">UFRN</a></li>
@@ -31,55 +31,9 @@
     <div class="bcc-main-content">
         <main>
             <section class="sec-main-content">
-                <h2><strong>Apresentação e História</strong></h2>
-                <div class="content-card">
-                    <div class="content-text">
-                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
-                        A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
-                        problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
-                    </div>
-                    <div class="content-images">
-                        <span>
-                            <figure>
-                                <figcaption>Texto sobre a imagem</figcaption>
-                                <img src="img/dimap.jpg" alt="prédio do curso" width="450vh" height="250vh">
-                                <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
-                            </figure>
-                        </span>
-                    </div>
-                    <hr>
-                </div>
-                <h2><strong>Matérias e Conteúdo</strong></h2>
-                <div class="content-card">
-                    <div class="content-text">
-                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
-                            A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
-                            problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
-                    </div>
-                    <div class="content-images">
-                        <span>
-                            <img src="img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="450vh" height="250vh">
-                            <img src="img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="450vh" height="250vh">
-                        </span>
-                    </div>
-                    <hr>
-                </div>
-                <h2><strong>Ciência e Mercado de Trabalho</strong></h2>
-                <div class="content-card">
-                    <div class="content-text">
-                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
-                            A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
-                            problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
-                    </div>
-                    <div class="content-images">
-                        <span>
-                            <img src="img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
-                            <img src="img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
-                        </span>
-                    </div>
-                    <hr>
-                </div>
-                <h2><strong>Notas de Corte e Calculadora de Pesos</strong></h2>
+                <span>
+                    <h2><strong>Notas de Corte e Calculadora de Pesos</strong></h2>
+                </span>
                 <div class="calculator-card">
                     <div class="calculator-text">
                          <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
@@ -126,6 +80,54 @@
                                 </div>
                             </fieldset>
                         </form>
+                    </div>
+                    <hr>
+                </div>
+                <h2><strong>Apresentação e História</strong></h2>
+                <div class="content-card">
+                    <div class="content-text">
+                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
+                        A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
+                        problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
+                    </div>
+                    <div class="content-images">
+                        <span>
+                            <figure>
+                                <figcaption>Texto sobre a imagem</figcaption>
+                                <img src="img/dimap.jpg" alt="prédio do curso" width="450vh" height="250vh">
+                                <img src="img/laboratorios.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
+                            </figure>
+                        </span>
+                    </div>
+                    <hr>
+                </div>
+                <h2><strong>Matérias e Conteúdo</strong></h2>
+                <div class="content-card">
+                    <div class="content-text">
+                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
+                            A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
+                            problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
+                    </div>
+                    <div class="content-images">
+                        <span>
+                            <img src="img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="450vh" height="250vh">
+                            <img src="img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="450vh" height="250vh">
+                        </span>
+                    </div>
+                    <hr>
+                </div>
+                <h2><strong>Ciência e Mercado de Trabalho</strong></h2>
+                <div class="content-card">
+                    <div class="content-text">
+                        <p>O curso de Bacharelado em Ciências da Computação tem por objetivo a formação teórica e prática em computação ou informática.<br><br>
+                            A formação do aluno abrange a compreensão do campo científico da computação que permitirá a sua aplicação na solução de
+                            problemas da sociedade e no desenvolvimento de conhecimento e tecnologias que permitam a evolução da computação.</p> 
+                    </div>
+                    <div class="content-images">
+                        <span>
+                            <img src="img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
+                            <img src="img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
+                        </span>
                     </div>
                     <hr>
                 </div>
