--- a/src/homepage_simple.html
+++ b/src/homepage_simple.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFRN-Ciências da Computação</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="css/homepage_avancada.css" rel="stylesheet">
+    <link href="css/homepage_simple.css" rel="stylesheet">
     <script src="js/calculadora_avancada.js" defer></script>
 </head>
 <body>
     <div class="bcc-header-container">
         <header>
             <div class="header-logo">
-                <img src="assets/img/brasao_negativo.png" alt="brasão ufrn" width="8%" height="8%">
+                <img src="assets/img/brasao_negativo.png" alt="brasão ufrn" width="110px" height="100px">
             </div>
             <div class="header-nav">
                 <h1><strong>UFRN - Ciências da Computação</strong></h1>
@@ -65,7 +65,7 @@
                     <div class="calculator-box">
                         <form id="notas-calculadora">
                             <fieldset>
-                                <legend>Calculadora de Pesos</legend>
+                                <legend>Calculadora de Média Ponderada</legend>
                                 <div class="form-row">
                                     <label for="linguagens-input">Linguagens, Códigos e suas Tecnologias: </label>
                                     <input id="linguagens-input" type="number" placeholder="TRI">
