corrigido erros e terminado o código

--- a/src/homepage_simples.html
+++ b/src/homepage_simples.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFRN-Ciências da Computação</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="css/homepage_complete.css" rel="stylesheet">
+    <link href="css/homepage_simples.css" rel="stylesheet">
     <script src="js/calculadora_avancada.js" defer></script>
 </head>
 <body>
     <div class="bcc-header-container">
         <header>
             <div class="header-logo">
-                <img src="assets/img/brasao_negativo.png" alt="brasão ufrn" width="105px" height="100px">
+                <img src="assets/img/brasao_negativo.png" alt="brasão ufrn" width="110px" height="100px">
             </div>
             <div class="header-nav">
-                <h1><strong>UFRN - Bacharelado em Ciências da Computação</strong></h1>
+                <h1><strong>UFRN - Ciências da Computação</strong></h1>
                 <nav>
                     <ul class="nav-items">
                         <li><a class="nav-link" href="https://www.ufrn.br">UFRN</a></li>
@@ -139,12 +139,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <figure>
-                                <figcaption>Atividades de Desenvolvimento Científico</figcaption>
-                                <img src="assets/img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
-                                <figcaption>Atividades Laborais</figcaption>
-                                <img src="assets/img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
-                            </figure>
+                            <img src="assets/img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
+                            <img src="assets/img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
                         </span>
                     </div>
                     <hr>
