corrigindo erros de responsividade

--- a/src/homepage_completo.html
+++ b/src/homepage_completo.html
@@ -16,7 +16,7 @@
                 <img src="assets/img/brasao_negativo.png" alt="brasão ufrn" width="105px" height="100px">
             </div>
             <div class="header-nav">
-                <h1><strong>UFRN - Bacharelado em Ciências da Computação</strong></h1>
+                <h1><b>UFRN - Bacharelado em Ciências da Computação</b></h1>
                 <nav>
                     <ul class="nav-items">
                         <li><a class="nav-link" href="https://www.ufrn.br">UFRN</a></li>
@@ -32,7 +32,7 @@
     <div class="bcc-main-content">
         <main>
             <section class="sec-main-content">
-                <h2><strong>Apresentação e História</strong></h2>
+                <h2><b>Apresentação e História</b></h2>
                 <div class="content-card">
                     <div class="content-text">
                         <p>O Bacharelado em Ciências da Computação visa proporcionar uma formação completa, abrangendo tanto aspectos teóricos quanto práticos. O curso tem como objetivo capacitar os alunos para aplicar o conhecimento computacional na resolução de problemas computacionais reais e no desenvolvimento de tecnologias inovadoras.
@@ -53,7 +53,7 @@
                     </div>
                     <hr>
                 </div>
-                <h2><strong>Notas de Corte e Calculadora de Pesos</strong></h2>
+                <h2><b>Notas de Corte e Calculadora de Pesos</b></h2>
                 <div class="calculator-card">
                     <div class="calculator-text">
                          <p>A forma principal para ingressar no curso é por meio da nota de corte mínima do TRI, via SISU feito a prova ENEM. Existem as formas de ingressão pelo ProUni e Fies, porém iremos focar na nota de corte do SISU.
@@ -106,7 +106,7 @@
                     </div>
                     <hr>
                 </div>
-                <h2><strong>Matérias e Conteúdo</strong></h2>
+                <h2><b>Matérias e Conteúdo</b></h2>
                 <div class="content-card">
                     <div class="content-text">
                         <p>O curso de Ciências da Computação abrange uma gama grande de disciplinas essenciais. Durante a graduação, os alunos exploram profundamente diversas áreas, incluindo:
@@ -129,7 +129,7 @@
                     </div>
                     <hr>
                 </div>
-                <h2><strong>Ciência e Mercado de Trabalho</strong></h2>
+                <h2><b>Ciência e Mercado de Trabalho</b></h2>
                 <div class="content-card">
                     <div class="content-text">
                         <p>No âmbito da ciência e do mercado de trabalho no Brasil, o campo da computação oferece amplas oportunidades e demanda por profissionais qualificados. O setor de tecnologia da informação (TI) tem experimentado um crescimento significativo, refletindo a necessidade constante de inovação e soluções digitais.
