--- a/slides.html
+++ b/slides.html
@@ -4,32 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Exemplo</title>
+	<link href="slides.css" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<figure>
-			<figcaption>UFRN</figcaption><br>
-			<hr>
-			<img src='src/assets/img/brasao_outline.png' width='300px' height='300px'>
-		</figure>
-		<nav>
-			<ul>
-				<li><a href=”#home”>Link1</a></li>
-				<li><a href=”#sobre”>Link2</a></li>
-				<li><a href=”#sobre”>Link3</a></li>
-			</ul>
-		</nav>
-		<hr>
+		<img src="src/assets/img/brasao_outline.png" alt="brasão ufrn" width="150px" height="150px">	
+		<h1><b>UFRN - Ciências da Computação</b></h1>
 	</header>
-<main>
-	<form width="100px">
-		<fieldset width="100px">
-			<legend>Login</legend>
-			<label>Digite seu Email</label>
-			<input type=”email” placeholder=”email”>
-			<button>Enviar</button>	
-		</fieldset>	
-	</form>
-</main>
 </body>
 </html>
