adicionado navbar mobile

--- a/exercicio-1-2/homepage.html
+++ b/exercicio-1-2/homepage.html
@@ -4,51 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFRN-Ciências da Computação</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="css/homepage_completo.css" rel="stylesheet">
-    <link href="css/calculator.css" rel="stylesheet">
-    <script src="js/calculadora_avancada.js" defer></script>
-    <script src="js/mobile_nav.js" defer></script>
 </head>
 <body>
     <div class="bcc-header-container">
         <header>
             <div class="header-logo">
-                <img src="assets/img/brasao_negativo.png" alt="brasão ufrn" width="90px" height="85px">
+                <img src="assets/img/brasao_outline.png" alt="brasão ufrn" width="200px" height="190px">
             </div>
             <div class="header-nav">
-                <h1><b>UFRN - Bacharelado em Ciências da Computação</b></h1>
+                <h1><b>UFRN - Ciências da Computação</b></h1>
                 <nav>
                     <ul class="nav-items">
-                        <li><a class="nav-link" href="#">Início</a></li>
-                        <li><a class="nav-link" href="#">Fórum</a></li>
-                        <li><a class="nav-link" href="#">Contato</a></li>
-                        <li><a class="nav-link" href="#">Sobre</a></li>
+                        <li><a class="nav-link" href="https://www.ufrn.br">UFRN</a></li>
                         <li><a class="nav-link" href="https://www.dimap.ufrn.br">DIMAP</a></li>
                         <li><a class="nav-link" href="https://petcc.dimap.ufrn.br">PETCC</a></li>
                         <li><a class="nav-link" href="https://www.metropoledigital.ufrn.br/portal/">IMD</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="mobile-nav">
-                <button id="mobile-btn" type="button" onclick="toggleNav()">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M3 3h18v2H3zm0 16h18v2H3zm0-8h18v2H3z"/></svg>
-                </button>
-                <div class="nav-dropdown" id="nav-dropdown">
-                    <nav>
-                        <ul class="mobile-nav-items">
-                            <li><a class="nav-mobile-link" href="#">Início</a></li>
-                            <li><a class="nav-mobile-link" href="#">Fórum</a></li>
-                            <li><a class="nav-mobile-link" href="#">Contato</a></li>
-                            <li><a class="nav-mobile-link" href="#">Sobre</a></li>
-                            <li><a class="nav-mobile-link" href="https://www.dimap.ufrn.br">DIMAP</a></li>
-                            <li><a class="nav-mobile-link" href="https://petcc.dimap.ufrn.br">PETCC</a></li>
-                            <li><a class="nav-mobile-link" href="https://www.metropoledigital.ufrn.br/portal/">IMD</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            
         </header>
         <hr>
     </div>
@@ -66,12 +39,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <figure>
-                                <figcaption>Departamento de Informática e Matemática Aplicada</figcaption>
                                 <img src="assets/img/dimap.jpg" alt="prédio do curso" width="450vh" height="250vh">
-                                <figcaption>Programa de Educação Tutorial Ciências da Computação</figcaption>
                                 <img src="assets/img/petcc.png" alt="petcc" width="450vh" height="250vh">
-                            </figure>
                         </span>
                     </div>
                     <hr>
@@ -118,7 +87,7 @@
                                     <input id="peso-redacao" type="number" placeholder="PESO"><br><br>
                                 </div>
                                 <div class="form-row">
-                                    <button id="botao-submit" type="button" onclick="media_ponderada()">Calcular</button>
+                                    <button id="botao-submit" type="button">Calcular</button>
                                     <div class="calculator-result">
                                         <p>Resultado:</p>
                                         <p id="calc-result"></p>
@@ -142,12 +111,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <figure>
-                                <figcaption>Matéria de Estruturas de Dados</figcaption>
                                 <img src="assets/img/estruturas e algoritmos.png" alt="Mapa Conceitual sobre algoritmos e estruturas de dados" width="450vh" height="250vh">
-                                <figcaption>Matérias de Exatas </figcaption>
                                 <img src="assets/img/matematica.jpg" alt="Quadro negro recheado de fórmulas matemáticas" width="450vh" height="250vh">
-                            </figure>
                         </span>
                     </div>
                     <hr>
@@ -163,12 +128,8 @@
                     </div>
                     <div class="content-images">
                         <span>
-                            <figure>
-                                <figcaption>Atividades de Desenvolvimento Científico</figcaption>
-                                <img src="assets/img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
-                                <figcaption>Atividades Laborais</figcaption>
-                                <img src="assets/img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
-                            </figure>
+                            <img src="assets/img/cientista-da-computacao.webp" alt="prédio do curso" width="450vh" height="250vh">
+                            <img src="assets/img/mercado de trabalho.jpg" alt="laboratorios do curso" width="450vh" height="250vh">
                         </span>
                     </div>
                     <hr>
